infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth
  ports: 
  - name: grpc
    port: 3000
    targetPort: auth-port
    protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: hello
  ports:
  - name: grpc
    port: 80
    targetPort: hello-port
    protocol: TCP
