infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  labels:
    name: grpc-ingress
spec:
  tls:
    - secretName: grpc-tls
      hosts:
        - juddbaguio.dev
  ingressClassName: nginx-internal
  defaultBackend:
    service:
      name: hello-service
      port:
        number: 80
  rules:
  - host: juddbaguio.dev
    http:
      paths:
      - pathType: Prefix
        path: /auth
        backend:
          service:
            name: auth-service
            port: 
              number: 3000
